--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dOrbsdb7Fzk&pp=ygUeZ29rdSB2cyBqaXJlbiBkdWJsYWRvIGNvbXBsZXRv"
-                title="YouTube video player" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=BAQvCB3Fnm0&pp=ygUNZ29rdSB2cyBqaXJlbg%3D%3D"   
+            title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -31,19 +31,19 @@
         <h2>Animes em Geral</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=Vv8zSF17z-E&pp=ygUObmFydXRvIHZzIHBhaW4%3D">
-                <img src="https://img.videoframe_25836.jpg" />
+                <img src="videoframe_25836.png" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=NKvX2GHVWjY&pp=ygUabWFkYXJhIHZzIGFsaWFuw6dhIHNoaW5vYmk%3D">
+                <img src="videoframe_4517.png" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=FAwbIS45Tjw&pp=ygUNRGlvIHZzIGpvdGFybw%3D%3D">
+                <img src="download.jpeg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=kAODy0iiylI&pp=ygUMdG9qaSB2cyBnb2pv">
+                <img src="jujutsu.jpeg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=8uIYkr6IAc4&pp=ygUPZ29rdSB2cyBraWQgYm9v">
+                <img src="dragon ball.jpeg" />
             </a>
         </div>
     </section>
